@@ -20,10 +20,13 @@ sub delete {
     $c->app->mysql->db->query('DELETE FROM sessions WHERE token = ?', $c->token);
     my $h = $c->app->mysql->db->query('SELECT * FROM sessions WHERE token = ?', $c->token)->hashes;
     if ($h->size) {
+        # We found the session, it hasn't been deleted
+        return 0;
+    } else {
         $c = Lstu::DB::Session->new(app => $c->app);
+        # We didn't found the session, it has been deleted
+        return 1;
     }
-
-    return $h->size;
 }
 
 sub write {
