@@ -1,9 +1,8 @@
 # vim:set sw=4 ts=4 sts=4 ft=perl expandtab:
 package Lstu::DB::URL::SQLite;
 use Mojo::Base 'Lstu::DB::URL';
-use Lstu::DB::SQLite;
 
-has 'record';
+has 'record' => 0;
 
 sub new {
     my $c = shift;
@@ -18,8 +17,9 @@ sub new {
 sub increment_counter {
     my $c = shift;
 
-    $c->record->update(counter => $c->counter + 1);
-    $c->counter($c->counter + 1);
+    $c->app->sqlite->db->query('UPDATE lstu SET counter = counter + 1 WHERE short = ?', $c->short);
+    my $h = $c->app->sqlite->db->query('SELECT counter FROM lstu WHERE short = ?', $c->short)->hashes->first;
+    $c->counter($h->{counter});
 
     return $c;
 }
@@ -27,24 +27,11 @@ sub increment_counter {
 sub write {
     my $c     = shift;
 
-    if (Lstu::DB::SQLite->begin) {
-        if (defined $c->record) {
-            $c->record->update(
-                short     => $c->short,
-                url       => $c->url,
-                counter   => $c->counter,
-                timestamp => $c->timestamp,
-            );
-        } else {
-            my $record = Lstu::DB::SQLite::Lstu->create(
-                short     => $c->short,
-                url       => $c->url,
-                counter   => $c->counter,
-                timestamp => $c->timestamp,
-            );
-            $c->record($record);
-        }
-        Lstu::DB::SQLite->commit;
+    if ($c->record) {
+        $c->app->sqlite->db->query('UPDATE lstu SET url = ?, counter = ?, timestamp = ? WHERE short = ?', $c->url, $c->counter, $c->timestamp, $c->short);
+    } else {
+        $c->app->sqlite->db->query('INSERT INTO lstu (short, url, counter, timestamp) VALUES (?, ?, ?, ?)', $c->short, $c->url, $c->counter, $c->timestamp);
+        $c->record(1);
     }
 
     return $c;
@@ -53,14 +40,16 @@ sub write {
 sub delete {
     my $c = shift;
 
-    my $result;
-    if (Lstu::DB::SQLite->begin) {
-        $result = $c->record->delete;
-        $c->record(undef);
-        Lstu::DB::SQLite->commit;
+    $c->app->sqlite->db->query('DELETE FROM lstu WHERE short = ?', $c->short);
+    my $h = $c->app->sqlite->db->query('SELECT * FROM lstu WHERE short = ?', $c->short)->hashes;
+    if ($h->size) {
+        # We found the URL, it hasn't been deleted
+        return 0;
+    } else {
+        $c = Lstu::DB::URL->new(app => $c->app);
+        # We didn't found the URL, it has been deleted
+        return 1;
     }
-
-    return $result;
 }
 
 sub exist {
@@ -69,17 +58,17 @@ sub exist {
 
     return undef unless $short;
 
-    return Lstu::DB::SQLite::Lstu->count('WHERE short = ?', $short);
+    return $c->app->sqlite->db->query('SELECT count(short) AS count FROM lstu WHERE short = ?', $short)->hashes->first->{count};
 }
 
 sub choose_empty {
     my $c = shift;
 
-    my @urls = Lstu::DB::SQLite::Lstu->select('WHERE url IS NULL LIMIT 1');
+    my $h = $c->app->sqlite->db->query('SELECT * FROM lstu WHERE url IS NULL')->hashes->shuffle;
 
-    if (scalar(@urls)) {
-        $c->short($urls[0]->short);
-        $c->record($urls[0]);
+    if ($h->size) {
+        $c->short($h->first->{short});
+        $c->record(1);
         return $c;
     } else {
         return undef;
@@ -89,7 +78,7 @@ sub choose_empty {
 sub count_empty {
     my $c = shift;
 
-    return Lstu::DB::SQLite::Lstu->count('WHERE url IS NULL');
+    return $c->app->sqlite->db->query('SELECT count(short) AS count FROM lstu WHERE url IS NULL')->hashes->first->{count};
 }
 
 sub paginate {
@@ -97,45 +86,48 @@ sub paginate {
     my $page        = shift;
     my $page_offset = shift;
 
-    return Lstu::DB::SQLite::Lstu->select("WHERE url IS NOT NULL ORDER BY counter DESC LIMIT ? offset ?", $page_offset, $page * $page_offset);
+    return @{$c->app->sqlite->db->query('SELECT * FROM lstu WHERE url IS NOT NULL ORDER BY counter DESC LIMIT ? offset ?', $page_offset, $page * $page_offset)->hashes->to_array};
 }
 
 sub get_a_lot {
     my $c = shift;
     my $u = shift;
 
+    if (scalar @{$u}) {
     my $p = join ",", (('?') x @{$u});
-    return Lstu::DB::SQLite::Lstu->select("WHERE short IN ($p) ORDER BY counter DESC", @{$u});
+        return @{$c->app->sqlite->db->query('SELECT * FROM lstu WHERE short IN ('.$p.') ORDER BY counter DESC', @{$u})->hashes->to_array};
+    } else {
+        return ();
+    }
 }
 
 sub total {
     my $c = shift;
 
-    return Lstu::DB::SQLite::Lstu->count("WHERE url IS NOT NULL");
+    return $c->app->sqlite->db->query('SELECT count(short) AS count FROM lstu WHERE url IS NOT NULL')->hashes->first->{count};
 }
 
 sub delete_all {
     my $c = shift;
 
-    # Rotten syntax, but prevents "Static Lstu::DB::SQLite->delete has been deprecated"
-    Lstu::DB::SQLite::Lstu->delete_where('1 = 1');
+    $c->app->sqlite->db->query('DELETE FROM lstu');
 }
 
 sub _slurp {
     my $c = shift;
 
-    my @urls;
+    my $h;
     if ($c->short) {
-       @urls = Lstu::DB::SQLite::Lstu->select('WHERE short = ?', $c->short);
-    } elsif ($c->url) {
-       @urls = Lstu::DB::SQLite::Lstu->select('WHERE url = ?', $c->url);
-    }
-    if (scalar @urls) {
-        $c->url($urls[0]->url);
-        $c->short($urls[0]->short);
-        $c->counter($urls[0]->counter);
-        $c->timestamp($urls[0]->timestamp);
-        $c->record($urls[0]);
+       $h = $c->app->sqlite->db->query('SELECT * FROM lstu WHERE short = ?', $c->short)->hashes;
+   } else {
+       $h = $c->app->sqlite->db->query('SELECT * FROM lstu WHERE url = ?', $c->url)->hashes;
+   }
+    if ($h->size) {
+        $c->url($h->first->{url});
+        $c->short($h->first->{short});
+        $c->counter($h->first->{counter});
+        $c->timestamp($h->first->{timestamp});
+        $c->record(1);
     }
 
     return $c;
